--- a/SpliteAndAggregation/pom.xml
+++ b/SpliteAndAggregation/pom.xml
@@ -67,6 +67,7 @@
       <artifactId>camel-spring-boot-starter</artifactId>
     </dependency>
 
+
     <dependency>
       <groupId>org.apache.camel.springboot</groupId>
       <artifactId>camel-jetty-starter</artifactId>
@@ -77,43 +78,20 @@
       <artifactId>camel-http-starter</artifactId>
     </dependency>
 
-
-
     <dependency>
       <groupId>org.apache.camel.springboot</groupId>
       <artifactId>camel-jackson-starter</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.camel.springboot</groupId>
+      <artifactId>camel-jacksonxml-starter</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.camel.springboot</groupId>
       <artifactId>camel-stream-starter</artifactId>
     </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.22</version>
-    </dependency>
-
-
-    <dependency>
-      <groupId>commons-dbcp</groupId>
-      <artifactId>commons-dbcp</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-sql</artifactId>
-    </dependency>
-
-
-
-
-
 
     <!-- Test -->
     <dependency>
